--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     window.googletag = window.googletag || { cmd: [] };
     googletag.cmd.push(function () {
       googletag.defineSlot('/22706859784/HOMETEST1', [300, 250], 'div-gpt-ad-1657358274986-0').addService(googletag.pubads());
+      googletag.defineSlot('/22706859784/HOMETEST1/home-patrocinado-1', [300, 250], 'div-gpt-ad-1657744658467-0').addService(googletag.pubads());
+      googletag.defineSlot('/22706859784/HOMETEST1/home-patrocinado-2', [300, 250], 'div-gpt-ad-1657779259983-0').addService(googletag.pubads());
       googletag.pubads().enableSingleRequest();
       googletag.enableServices();
     });
   </script>
+  
 </head>
 
 <body>
@@ -27,19 +30,20 @@
   </div>
   <!-- page content -->
   Ad unit: Home Patrocinado 1
-  <!-- /22706859784/HOMETEST1/home-patrocinado-1 -->
-  <div id='div-gpt-ad-1657732888155-0' style='min-width: 300px; min-height: 250px;'>
-    <script>
-      googletag.cmd.push(function () { googletag.display('div-gpt-ad-1657732888155-0'); });
-    </script>
-  </div>
+<!-- /22706859784/HOMETEST1/home-patrocinado-1 -->
+<div id='div-gpt-ad-1657744658467-0' style='min-width: 300px; min-height: 250px;'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1657744658467-0'); });
+  </script>
+</div>
   Ad unit: Home Patrocinado 2
   <!-- /22706859784/HOMETEST1/home-patrocinado-2 -->
-  <div id='div-gpt-ad-1657732970652-0' style='min-width: 300px; min-height: 250px;'>
-    <script>
-      googletag.cmd.push(function () { googletag.display('div-gpt-ad-1657732970652-0'); });
-    </script>
-  </div>
+<!-- /22706859784/HOMETEST1/home-patrocinado-2 -->
+<div id='div-gpt-ad-1657779259983-0' style='min-width: 300px; min-height: 250px;'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1657779259983-0'); });
+  </script>
+</div>
 </body>
 
 </html>
